--- a/index.html
+++ b/index.html
@@ -23,354 +23,19 @@
     <header class="header">
       <div class="container">
         <nav class="header__nav">
-          <div class="header__logo">
-            <p>Startup</p>
-          </div>
-          <div class="header__wrap">
-            <ul class="header_list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Service</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Works</a></li>
-              <li><a href="#">Blogs</a></li>
-              <li><a href="#">Clients</a></li>
-              <li><a href="#">Contacts</a></li>
-            </ul>
-          </div>
+          <a href="index.html" class="header__logo">
+            <img src="img/logoHeader.png" alt=""
+          /></a>
+          <ul class="header__list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Services</a></li>
+            <li><a href="index.html">Portfolio</a></li>
+            <li><a href="about.html">Blog</a></li>
+            <li><a href="index.html">Contact us</a></li>
+          </ul>
+          <a href="#" class="header__signUp">sign up</a>
         </nav>
-        <div class="header__content">
-          <div class="header__text">
-            <h1 class="text-center text-uppercase">
-              Welcome to STARTUP
-            </h1>
-            <p class="text-center mx-auto">
-              Your Favourite Creative Agency Template
-            </p>
-          </div>
-
-          <div class="header__btns">
-            <a href="#" class="header__btn">Get started</a>
-          </div>
-        </div>
       </div>
     </header>
-    <section class="services">
-      <div class="container">
-        <div class="services__header">
-          <h1 class="defaultTitle text-center text-uppercase">Services</h1>
-          <p class="defaultSubtitle text-center">
-            We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
-          </p>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="services__item d-flex flex-column align-items-center">
-              <div class="services__logo">
-                <img
-                  class="services__logo_pic col-"
-                  src="img/fa-font.png"
-                  alt="#"
-                />
-              </div>
-              <h6 class="my-3 text-uppercase">Clean Typography</h6>
-              <p class="">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit. Lorem ipsum.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="services__item d-flex flex-column align-items-center">
-              <div class="services__logo">
-                <img class="services__logo_pic" src="img/fa-code.png" alt="" />
-              </div>
-              <h6 class="my-3 text-uppercase">Rock Solid Code</h6>
-              <p class="">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit. Lorem ipsum.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="services__item d-flex flex-column align-items-center">
-              <div class="services__logo">
-                <img
-                  class="services__logo_pic"
-                  src="img/fa-support.png"
-                  alt=""
-                />
-              </div>
-              <h6 class="my-3 text-uppercase">Expert Support</h6>
-              <p class="">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit. Lorem ipsum.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="about">
-      <div class="container">
-        <div class="about__header">
-          <h1 class="defaultTitle text-center text-uppercase">About us</h1>
-          <p class="defaultSubtitle text-center">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
-          </p>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="about__text d-flex align-items-center">
-              <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam
-                nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat,
-                sed diam voluptua. At vero eos et accusam et justo dolores et ea
-                rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam
-                erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="about__text d-flex align-items-center">
-              <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam
-                nonumy eirtempor invidunt ut labore et dolore aliquyam erat, sed
-                diam voluptua. At vero eos eaccusam et justo dolores et ea
-                rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam
-                erat. Loreipsum dolor sit amet. Lorem ipsum dolor et.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="about__item">
-              <div class="about__pic">
-                <div class="about__overlay">
-                  <a href="#"><i class="fa fa-facebook-f"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <img src="./img/about1.png" alt="" />
-              </div>
-              <h6>Rubel Miah</h6>
-              <p>Lead WordPress Developer</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="about__item">
-              <div class="about__pic">
-                <div class="about__overlay">
-                  <a href="#"><i class="fa fa-facebook-f"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <img src="./img/about2.png" alt="" />
-              </div>
-              <h6>Rubel Miah</h6>
-              <p>Lead WordPress Developer</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="about__item">
-              <div class="about__pic">
-                <div class="about__overlay">
-                  <a href="#"><i class="fa fa-facebook-f"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <img src="./img/about3.png" alt="" />
-              </div>
-              <h6>Rubel Miah</h6>
-              <p>Lead WordPress Developer</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="about__item">
-              <div class="about__pic">
-                <div class="about__overlay">
-                  <a href="#"><i class="fa fa-facebook-f"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <img src="./img/about4.png" alt="" />
-              </div>
-              <h6>Rubel Miah</h6>
-              <p>Lead WordPress Developer</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="works">
-      <div class="container">
-        <div class="works__header">
-          <h1 class="defaultTitle text-center text-uppercase">Latest works</h1>
-          <nav class="works__nav">
-            <div class="works__wrap">
-              <ul
-                class="Works__list d-flex justify-content-center align-items-center"
-              >
-                <li><a href="#">All</a></li>
-                <li><a href="#">Branding</a></li>
-                <li><a href="#">Design</a></li>
-                <li><a href="#">Development</a></li>
-                <li><a href="#">Strategy</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-        <div class="works__items justify-content-center align-items-center">
-          <div class="works__item">
-            <h2 class="works__title">Hair Dresser</h2>
-            <p class="works__text">Branding</p>
-            <button
-              class="works__btn d-flex justify-content-center align-items-center text-uppercase"
-            >
-              View
-              <i class="material-icons">chevron_right </i>
-            </button>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 18.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 19.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 20.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 21.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 22.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 23.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 25.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 26.png" alt="" />
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 mb-2">
-            <div class="pics__works">
-              <img class="img-fluid" src="./img/Layer 24.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="inTouch">
-      <div class="container">
-        <div class="inTouch__items">
-          <h2
-            class="inTouch__title justify-content-center align-items-center d-flex text-center"
-          >
-            Do you like OUR WORK so far? <br />
-            Let's talk about YOUR PROJECT!
-          </h2>
-          <div class="inTouch__btns">
-            <a href="" class="inTouch__btn text-uppercase">Get in touch</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="blog">
-      <div class="container">
-        <div class="blog__mainTitle">
-          <h1 class="defaultTitle text-center text-uppercase">
-            Recent blog posts
-          </h1>
-          <p class="defaultSubtitle text-center">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
-          </p>
-        </div>
-        <div class="blog__items">
-          <div class="blog__item d-flex">
-            <div class="blog__pics">
-              <img class="blog__pic" src="img/blog_bg (1).png" alt="" />
-            </div>
-            <div class="blog__content">
-              <div class="blog__title d-flex">
-                <div
-                  class="blog__date d-flex flex-column justify-content-center align-items-center"
-                >
-                  <p>18</p>
-                  <p>oct</p>
-                </div>
-                <div class="date__title">
-                  <h6 class="startup__title text-uppercase">
-                    Startup ideas needs to be funded
-                  </h6>
-                  <p class="date__by">By Khalil Uddin in Development</p>
-                </div>
-              </div>
-              <div class="blog__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod teduntlabore et dolore magna aliquyam erat,
-                  sed diam voluptua. At vero eos et accusam et justo duo dolores
-                  et erebum. Stet clita kasd gubergren, no sea takimata sanctus
-                  est Lorem ipsum dolor sit am Lorem ipsum dolor sit amet,
-                  consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                  invidulabore et dolore aliquyam erat, sed diam
-                </p>
-              </div>
-              <div class="blog__btns">
-                <a href="" class="blog__btn text-uppercase text-decoration-none"
-                  >Read more</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="card">
-      <div class="container">
-        <div class="card__item">
-          <div class="card__title">
-            Lorem ipsum dolor sit amet.
-          </div>
-          <div class="card__content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            doloribus expedita dolor, quasi laboriosam reprehenderit tenetur
-            provident accusantium nobis doloremque sequi ea voluptatibus veniam
-            dolores, nihil obcaecati fugiat ex modi?
-          </div>
-        </div>
-      </div>
-    </section>
   </body>
 </html>
