--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="about.html">Blog</a></li>
             <li><a href="index.html">Contact us</a></li>
           </ul>
-          <a href="#" class="header__signUp">sign up</a>
+          <a href="#" class="header__login">login</a>
         </nav>
       </div>
     </header>
