--- a/index.html
+++ b/index.html
@@ -30,19 +30,45 @@
   <body>
     <header class="header">
       <div class="container">
-        <nav class="header__nav">
-          <a href="index.html" class="header__logo">
-            <img src="img/logoHeader.png" alt=""
-          /></a>
-          <ul class="header__list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Services</a></li>
-            <li><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">Blog</a></li>
-            <li><a href="index.html">Contact us</a></li>
-          </ul>
-          <a href="#" class="header__login">login</a>
-        </nav>
+        <div class="header__content">
+          <div class="header__picHeadphones">
+            <img src="img/Headphones.png" alt="" />
+          </div>
+          <nav class="header__nav">
+            <a href="index.html" class="header__logo">
+              <img src="img/logoHeader.png" alt=""
+            /></a>
+            <ul class="header__list">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">Services</a></li>
+              <li><a href="index.html">Portfolio</a></li>
+              <li><a href="about.html">Blog</a></li>
+              <li><a href="index.html">Contact us</a></li>
+            </ul>
+            <a href="#" class="header__login">login</a>
+          </nav>
+          <div class="header__textContent">
+            <div class="header__text">
+              <h1 class="header__title text-uppercase">Flat + Free = Flaby</h1>
+              <p>
+                A Modern Flat design corporate template for free download with
+                all great features and trendy look.
+              </p>
+              <div class="header__btns">
+                <a href="" class="header__btn"
+                  ><img src="img/google_play.png" alt="" /> Google Store</a
+                >
+                <a href="" class="header__btn">Learn More</a>
+              </div>
+            </div>
+            <div class="header__picEarphones">
+              <img src="img/Earphones.png" alt="" />
+            </div>
+          </div>
+          <div class="header__picPencils">
+            <img src="img/pencil.png" alt="" />
+          </div>
+        </div>
       </div>
     </header>
   </body>
