--- a/index.html
+++ b/index.html
@@ -71,5 +71,45 @@
         </div>
       </div>
     </header>
+    <section class="services">
+      <div class="container">
+        <div class="services__title">
+          <h2>Welcome to</h2>
+          <h3>our sevices</h3>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="services__item d-flex flex-column align-items-center">
+              <img src="img/web.png" alt="" />
+              <h6 class="servises__subTitle">Web Development</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                the majorityalteration make difficult
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="services__item d-flex flex-column align-items-center">
+              <img src="img/photo.png" alt="" />
+              <h6 class="servises__subTitle">Photography</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                the majorityalteration make difficult
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="services__item d-flex flex-column align-items-center">
+              <img src="img/vector.png" alt="" />
+              <h6 class="servises__subTitle">Vector Artist</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                the majorityalteration make difficult
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
