--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="services__item d-flex flex-column align-items-center">
-              <img src="img/web.png" alt="" />
+              <img class="services__pic" src="img/web.png" alt="" />
               <h6 class="servises__subTitle">Web Development</h6>
               <p>
                 There are many variations of passages of Lorem Ipsum available,
@@ -90,7 +90,7 @@
           </div>
           <div class="col-lg-4">
             <div class="services__item d-flex flex-column align-items-center">
-              <img src="img/photo.png" alt="" />
+              <img class="services__pic" src="img/Layer 73.png" alt="" />
               <h6 class="servises__subTitle">Photography</h6>
               <p>
                 There are many variations of passages of Lorem Ipsum available,
@@ -100,7 +100,7 @@
           </div>
           <div class="col-lg-4">
             <div class="services__item d-flex flex-column align-items-center">
-              <img src="img/vector.png" alt="" />
+              <img class="services__pic" src="img/Layer 74.png" alt="" />
               <h6 class="servises__subTitle">Vector Artist</h6>
               <p>
                 There are many variations of passages of Lorem Ipsum available,
