--- a/index.html
+++ b/index.html
@@ -111,5 +111,437 @@
         </div>
       </div>
     </section>
+
+    <!-- <section class="features">
+      <div class="container">
+        <div class="features__item">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="iPad__pic">
+                <img src="img/iPad .png" alt="" />
+              </div>
+              <div class="iPhone__pic">
+                <img src="img/iPhone.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="features__text">
+                <h6 class="features__title">We have great features with</h6>
+                <h6 class="features__subTitle">
+                  Unlimited Customization Features
+                </h6>
+                <p class="features__text">
+                  There are many variations of passages of Lorem Ipsum
+                  available, the majorityalteration make difficult
+                </p>
+              </div>
+              <ul class="features__list">
+                <li>
+                  <a href="#"
+                    >More wordpress featrures with great responsive design</a
+                  >
+                </li>
+                <li>
+                  <a href="#">Corporate flat design with necessary elements</a>
+                </li>
+                <li>
+                  <a href="#">Free vector shape and mockup by great designer</a>
+                </li>
+                <li>
+                  <a href="#"
+                    >Full one page flat and modern trend following goods</a
+                  >
+                </li>
+              </ul>
+              <a href="" class="features__btn">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+    <section class="unlimited">
+      <div class="container">
+        <div class="unlimited__back">
+          <div class="row">
+            <div class="col-lg-6 col-sm-4 col-8">
+              <img class="unlimited__pic" src="img/mockup.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-sm-12"></div>
+          <div class="col-lg-6 col-sm-8 unlimited__content">
+            <p class="unlimited__title">
+              We have great features with
+            </p>
+            <p class="unlimited__subtitle">
+              Unlimited Customization Features
+            </p>
+            <p class="unlimited__text">
+              There are many variations of passages of Lorem Ipsum available,
+              the majorityalteration make difficult
+            </p>
+            <ul class="features">
+              <li class="features__item">
+                More wordpress featrures with great responsive design.
+              </li>
+              <li class="features__item">
+                Corporate flat design with necessary elements.
+              </li>
+              <li class="features__item">
+                Free vector shape and mockup by great designer.
+              </li>
+              <li class="features__item">
+                Full one page flat and modern trend following goods.
+              </li>
+            </ul>
+            <div class="unlimited__btn">
+              <a href="" class="readMore__btn text-uppercase">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="other">
+      <div class="container">
+        <h2>View Our Latest</h2>
+        <h3>other services</h3>
+        <div class="others">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/icon.png" alt="" />
+                  <h6>Idea Developing</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/Browser.png" alt="" />
+                  <h6>Best Coding</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/Game.png" alt="" />
+                  <h6>Game Design</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/ResizeDown.png" alt="" />
+                  <h6>Responsive Design</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/Cart.png" alt="" />
+                  <h6>Free Shopping</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="others__item">
+                <div class="others__title d-flex align-items-center">
+                  <img src="img/Gift.png" alt="" />
+                  <h6>Bonus Download</h6>
+                </div>
+                <div class="others__desc">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majorityalteration in some form with design
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="customers">
+      <div class="container">
+        <h2>Get know About</h2>
+        <h3>what customer say</h3>
+        <div class="row justify-content-center ">
+          <div class="col-md-12 col-lg-8">
+            <div class="customers__slider slick-initialized slick-slider">
+              <div class="slider__prevArrow slick-arrow" style="">Previous</div>
+              <div class="slick-list draggable">
+                <div
+                  class="slick-track"
+                  style="opacity: 1; width: 7020px; transform: translate3d(-540px, 0px, 0px);"
+                >
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="-1"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face6.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-current slick-active"
+                    data-slick-index="0"
+                    aria-hidden="false"
+                    tabindex="0"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face1.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide"
+                    data-slick-index="1"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face2.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide"
+                    data-slick-index="2"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face3.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide"
+                    data-slick-index="3"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face4.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide"
+                    data-slick-index="4"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face5.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide"
+                    data-slick-index="5"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face6.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="6"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face1.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="7"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face2.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="8"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face3.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="9"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face4.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="10"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face5.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                  <div
+                    class="customers__slide slick-slide slick-cloned"
+                    data-slick-index="11"
+                    aria-hidden="true"
+                    tabindex="-1"
+                    style="width: 520px;"
+                  >
+                    <div class="customers__image">
+                      <img src="img/faces/face6.jpg" alt="" />
+                    </div>
+                    <div class="customers__name">Sourabh B.</div>
+                    <div class="customers__post">Co Founder of Mew</div>
+                    <div class="customers__review">
+                      Great Team with great experience, i would reguler
+                      recommended to all that you will get better support by
+                      working with this awesome team and their expert members :)
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="slider__nextArrow slick-arrow" style="">Next</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
