--- a/index.html
+++ b/index.html
@@ -203,7 +203,6 @@
         </div>
       </div>
     </section>
-
     <section class="other">
       <div class="container">
         <h2>View Our Latest</h2>
@@ -281,6 +280,31 @@
                   available, but the majorityalteration in some form with design
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="resourse">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-12">
+            <p class="resourse__title">Feel free to download our</p>
+            <p class="resourse__subTitle">Great Resourse for free</p>
+            <p class="resourse__text">
+              There are many variations of passages of Lorem Ipsum available
+              &amp; majorityalteration
+            </p>
+            <p class="resourse__desc">
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia.
+            </p>
+          </div>
+          <div class="col-sm-6 col-12">
+            <div class="resourse__image">
+              <img src="img/resourse.png" alt="" />
             </div>
           </div>
         </div>
